--- a/src/package.json
+++ b/src/package.json
@@ -19,7 +19,10 @@
   "public": true,
   "dependencies": {
     "@vertx/web": "^3.7.1",
+    "events": "^3.0.0",
     "graphql": "^14.0.2",
+    "graphql-subscriptions": "^1.1.0",
+    "iterall": "^1.2.2",
     "querystring": "^0.2.0"
   },
   "keywords": [
